--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "eslint": "^5.15.1",
     "react": "16.6.3",
     "react-native": "0.58.6",
-    "react-native-dotenv": "^0.2.0"
+    "react-native-dotenv": "^0.2.0",
+    "react-instantsearch": "^5.4.0"
   },
   "devDependencies": {
     "@types/jest": "^24.0.9",
     "@types/react": "^16.8.7",
+    "@types/react-instantsearch": "^5.2.2",
     "@types/react-native": "^0.57.38",
     "@types/react-test-renderer": "^16.8.1",
     "babel-core": "^7.0.0-bridge.0",
